--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <!-- Các nút liên kết mạng xã hội -->
         <div class="social-links">
-            <a href="https://www.facebook.com" target="_blank" class="btn facebook">Facebook</a>
-            <a href="https://www.instagram.com" target="_blank" class="btn instagram">Instagram</a>
-            <a href="https://www.twitter.com" target="_blank" class="btn twitter">Twitter</a>
-            <a href="https://www.linkedin.com" target="_blank" class="btn linkedin">LinkedIn</a>
+            <a href="https://www.facebook.com/Baoishere/" target="_blank" class="btn facebook">Facebook</a>
+            <a href="https://www.instagram.com/1340ishere/" target="_blank" class="btn instagram">Instagram</a>
+            <a href="https://discord.com/users/801469417585770526" target="_blank" class="btn discord">Discord</a>
+            <a href="https://github.com/Baoishere" target="_blank" class="btn github">Github</a>
         </div>
     </div>
 </body>
