--- a/index.html
+++ b/index.html
@@ -3,24 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Links</title>
+    <title>Baoishere</title>
+
+    <!-- Thư viện Bootstrap, AOS và Font Awesome -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+    <!-- File CSS tùy chỉnh -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Ảnh đại diện -->
-        <img src="avatar.jpg" alt="Avatar" class="avatar">
+    <div class="container py-5">
+        <div class="card mx-auto text-center p-4 shadow-lg" data-aos="fade-up">
+            <!-- Ảnh đại diện -->
+            <img src="avatar.jpg" alt="Avatar" class="avatar mx-auto mb-3">
 
-        <!-- Tên hiển thị -->
-        <h1>Nguyễn Gia Chi Bảo</h1>
+            <!-- Tên hiển thị -->
+            <h1 class="mb-4">Xin chào, mình là Baoishere!</h1>
 
-        <!-- Các nút liên kết mạng xã hội -->
-        <div class="social-links">
-            <a href="https://www.facebook.com/Baoishere/" target="_blank" class="btn facebook">Facebook</a>
-            <a href="https://www.instagram.com/1340ishere/" target="_blank" class="btn instagram">Instagram</a>
-            <a href="https://discord.com/users/801469417585770526" target="_blank" class="btn discord">Discord</a>
-            <a href="https://github.com/Baoishere" target="_blank" class="btn github">Github</a>
+            <!-- Các nút liên kết mạng xã hội -->
+            <div class="social-links">
+                <a href="https://www.facebook.com/Baoishere/" target="_blank" class="btn btn-facebook" data-aos="zoom-in">
+                    <i class="fab fa-facebook-f"></i> Facebook
+                </a>
+                <a href="https://www.instagram.com/1340ishere/" target="_blank" class="btn btn-instagram" data-aos="zoom-in">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://discord.com/users/801469417585770526" target="_blank" class="btn btn-discord" data-aos="zoom-in">
+                    <i class="fab fa-discord"></i> Discord
+                </a>
+                <a href="https://github.com/Baoishere" target="_blank" class="btn btn-github" data-aos="zoom-in">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
         </div>
     </div>
+
+    <!-- Thư viện JS Bootstrap & AOS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
